Tue Dec  9 13:25:51 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* cont.c (fiber_status), template/insns.inc.tmpl (ruby_vminsn_type),
	  vm_insnhelper.h (BOP): ISO C forbids comma at end of enumerator
	  list.

	* vm_insnhelper.c (check_cfunc): use function pointer.

Tue Dec  9 12:08:47 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* .gdbinit (rp): fixed typo for T_STRUCT.

Tue Dec  9 11:50:46 2008  Yuki Sonoda (Yugui)  <yugui@yugui.jp>

	* pack.c (pack_pck): fixed [ruby-dev:37295]. 
	  Array#pack always has returned an US-ASCII string when
	  the given format ended with 'u', 'M' or 'm'.

Tue Dec  9 03:21:37 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* mkconfig.rb: fix for continued lines.  based on a patch from
	  Marcus Rueckert <darix AT opensu.se> at [ruby-core:20420].

Tue Dec  9 00:54:01 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* tool/make-snapshot (package): enc.mk in snapshot is dummy and should
	  not deal with objects.  [ruby-core:20422]

Tue Dec  9 00:17:50 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* enc/depend (clean-srcs): split out from clean.

Mon Dec  8 23:34:18 2008  Yuki Sonoda (Yugui)  <yugui@yugui.jp>

	* pack.c (pack_pack): fixed odd act of 'm*', 'M*', and 'P*'.
	  just ignores '*' in these cases.
	  [ruby-dev:37289]

Mon Dec  8 18:31:41 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* pack.c (pack_pack): fixed length for odd length string.
	  [ruby-dev:37283]

Mon Dec  8 11:28:14 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ruby.c (proc_options): added version, copyright, usage, yydebug,
	  syntax to --dump option.

Mon Dec  8 11:15:45 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ruby.c (proc_options): source-encoding option.

Mon Dec  8 10:32:33 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ruby.c (set_option_encoding_once): dry.

	* ruby.c (proc_options): checks extra argument for -E/--encoding.

Sun Dec  7 23:47:37 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>
